@@ -1,42 +1,37 @@
 package com.sap.hcf.cf.logging.opentelemetry.agent.ext.binding;
 
 import io.pivotal.cfenv.core.CfService;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.assertj.core.api.AbstractStringAssert;
+import org.jetbrains.annotations.NotNull;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.runners.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.assertTrue;
+import static java.util.Map.entry;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class CloudLoggingBindingPropertiesSupplierTest {
 
-    private static final Map<String, Object> CREDENTIALS = Collections.unmodifiableMap(new HashMap<String, Object>() {{
-        put("ingest-otlp-endpoint", "test-endpoint");
-        put("ingest-otlp-key", "test-client-key");
-        put("ingest-otlp-cert", "test-client-cert");
-        put("server-ca", "test-server-cert");
-    }});
+    private static final Map<String, Object> CREDENTIALS =
+            Map.ofEntries(entry("ingest-otlp-endpoint", "test-endpoint"), entry("ingest-otlp-key", "test-client-key"),
+                          entry("ingest-otlp-cert", "test-client-cert"), entry("server-ca", "test-server-cert"));
 
-    private static final Map<String, Object> BINDING = Collections.unmodifiableMap(new HashMap<String, Object>() {{
-        put("label", "user-provided");
-        put("name", "test-name");
-        put("tags", Collections.singletonList("Cloud Logging"));
-        put("credentials", CREDENTIALS);
-    }});
+    private static final Map<String, Object> BINDING =
+            Map.ofEntries(entry("label", "user-provided"), entry("name", "test-name"),
+                          entry("tags", Collections.singletonList("Cloud Logging")), entry("credentials", CREDENTIALS));
 
     @Mock
     private CloudLoggingServicesProvider servicesProvider;
@@ -44,11 +39,10 @@ public class CloudLoggingBindingPropertiesSupplierTest {
     @InjectMocks
     private CloudLoggingBindingPropertiesSupplier propertiesSupplier;
 
-    private static void assertFileContent(String expected, String filename) throws IOException {
-        String contents = Files.readAllLines(Paths.get(filename))
-                .stream()
-                .collect(Collectors.joining("\n"));
-        assertThat(contents, is(equalTo(expected)));
+    @NotNull
+    private static AbstractStringAssert<?> assertFileContent(String filename) throws IOException {
+        List<String> lines = Files.readAllLines(Paths.get(filename));
+        return assertThat(String.join("\n", lines));
     }
 
     private static CfService createCfService(Map<String, Object> properties, Map<String, Object> credentials) {
@@ -61,25 +55,24 @@ public class CloudLoggingBindingPropertiesSupplierTest {
     public void emptyWithoutBindings() {
         when(servicesProvider.get()).thenReturn(Stream.empty());
         Map<String, String> properties = propertiesSupplier.get();
-        assertTrue(properties.isEmpty());
+        assertThat(properties).isEmpty();
     }
 
     @Test
     public void extractsBinding() throws Exception {
         when(servicesProvider.get()).thenReturn(Stream.of(createCfService(BINDING, CREDENTIALS)));
-        CloudLoggingBindingPropertiesSupplier propertiesSupplier = new CloudLoggingBindingPropertiesSupplier(servicesProvider);
+        CloudLoggingBindingPropertiesSupplier propertiesSupplier =
+                new CloudLoggingBindingPropertiesSupplier(servicesProvider);
 
         Map<String, String> properties = propertiesSupplier.get();
 
-        assertThat(properties, hasEntry("otel.exporter.otlp.endpoint", "https://test-endpoint"));
-        assertThat(properties, hasKey("otel.exporter.otlp.client.key"));
-        assertFileContent("test-client-key", properties.get("otel.exporter.otlp.client.key"));
-        assertThat(properties, hasKey("otel.exporter.otlp.client.key"));
-        assertFileContent("test-client-key", properties.get("otel.exporter.otlp.client.key"));
-        assertThat(properties, hasKey("otel.exporter.otlp.client.certificate"));
-        assertFileContent("test-client-cert", properties.get("otel.exporter.otlp.client.certificate"));
-        assertThat(properties, hasKey("otel.exporter.otlp.certificate"));
-        assertFileContent("test-server-cert", properties.get("otel.exporter.otlp.certificate"));
+        assertThat(properties).containsEntry("otel.exporter.otlp.endpoint", "https://test-endpoint")
+                              .containsKey("otel.exporter.otlp.client.key")
+                              .containsKey("otel.exporter.otlp.client.certificate")
+                              .containsKey("otel.exporter.otlp.certificate");
+        assertFileContent(properties.get("otel.exporter.otlp.client.key")).isEqualTo("test-client-key");
+        assertFileContent(properties.get("otel.exporter.otlp.client.certificate")).isEqualTo("test-client-cert");
+        assertFileContent(properties.get("otel.exporter.otlp.certificate")).isEqualTo("test-server-cert");
     }
 
     @Test
@@ -88,11 +81,12 @@ public class CloudLoggingBindingPropertiesSupplierTest {
             remove("ingest-otlp-endpoint");
         }};
         when(servicesProvider.get()).thenReturn(Stream.of(createCfService(BINDING, credentials)));
-        CloudLoggingBindingPropertiesSupplier propertiesSupplier = new CloudLoggingBindingPropertiesSupplier(servicesProvider);
+        CloudLoggingBindingPropertiesSupplier propertiesSupplier =
+                new CloudLoggingBindingPropertiesSupplier(servicesProvider);
 
         Map<String, String> properties = propertiesSupplier.get();
 
-        assertTrue(properties.isEmpty());
+        assertThat(properties).isEmpty();
     }
 
     @Test
@@ -101,11 +95,12 @@ public class CloudLoggingBindingPropertiesSupplierTest {
             remove("ingest-otlp-cert");
         }};
         when(servicesProvider.get()).thenReturn(Stream.of(createCfService(BINDING, credentials)));
-        CloudLoggingBindingPropertiesSupplier propertiesSupplier = new CloudLoggingBindingPropertiesSupplier(servicesProvider);
+        CloudLoggingBindingPropertiesSupplier propertiesSupplier =
+                new CloudLoggingBindingPropertiesSupplier(servicesProvider);
 
         Map<String, String> properties = propertiesSupplier.get();
 
-        assertTrue(properties.isEmpty());
+        assertThat(properties).isEmpty();
     }
 
     @Test
@@ -114,11 +109,12 @@ public class CloudLoggingBindingPropertiesSupplierTest {
             remove("ingest-otlp-key");
         }};
         when(servicesProvider.get()).thenReturn(Stream.of(createCfService(BINDING, credentials)));
-        CloudLoggingBindingPropertiesSupplier propertiesSupplier = new CloudLoggingBindingPropertiesSupplier(servicesProvider);
+        CloudLoggingBindingPropertiesSupplier propertiesSupplier =
+                new CloudLoggingBindingPropertiesSupplier(servicesProvider);
 
         Map<String, String> properties = propertiesSupplier.get();
 
-        assertTrue(properties.isEmpty());
+        assertThat(properties).isEmpty();
     }
 
     @Test
@@ -127,10 +123,11 @@ public class CloudLoggingBindingPropertiesSupplierTest {
             remove("server-ca");
         }};
         when(servicesProvider.get()).thenReturn(Stream.of(createCfService(BINDING, credentials)));
-        CloudLoggingBindingPropertiesSupplier propertiesSupplier = new CloudLoggingBindingPropertiesSupplier(servicesProvider);
+        CloudLoggingBindingPropertiesSupplier propertiesSupplier =
+                new CloudLoggingBindingPropertiesSupplier(servicesProvider);
 
         Map<String, String> properties = propertiesSupplier.get();
 
-        assertTrue(properties.isEmpty());
+        assertThat(properties).isEmpty();
     }
 }
